@@ -43,6 +43,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20138: The wsgiref.application_uri() and wsgiref.request_uri()
+  functions now conform to PEP 3333 when handle non-ASCII URLs.
+
 - Issue #19097: Raise the correct Exception when cgi.FieldStorage is given an
   Invalid fileobj.
 
